testcases/error/invalid_type_declaration.veryl
interface invalid_type_declaration {
    enum X {
        X,
    }
}
